[project]
name = "djangogirls"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "geoqiao", email = "me@example.com"},
]
dependencies = [
    "django>=5.1.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
